Bug Fixed of overflowing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
+  max-width: 100vw;
   background-color: #191a27;
   scroll-behavior: smooth;
   user-select: none;
